@@ -1,14 +1,10 @@
 package com.toj.service;
 
 import com.toj.dto.routine.CreateRoutineRequest;
-import com.toj.dto.routine.CreateRoutineResponse;
 import com.toj.dto.routine.GetAllRoutineResponse;
-import com.toj.entity.Daily;
-import com.toj.entity.DailyCate;
-import com.toj.entity.Member;
-import com.toj.entity.Routine;
+import com.toj.entity.*;
 import com.toj.repository.DailyRepository;
-import com.toj.repository.RecordRepository;
+import com.toj.repository.RoutineRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,33 +15,45 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class RoutineService {
-    private final RecordRepository recordRepository;
+    private final RoutineRepository routineRepository;
     private final DailyRepository dailyRepository;
     private final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
     public Long createRoutine(CreateRoutineRequest request, Member findMember) {
         Routine routine = new Routine(findMember, request.getContent(), request.getCategories(), request.getStartDate(), request.getEndDate(), request.getAlarmTime());
-        recordRepository.save(routine);
+        routineRepository.save(routine);
         return routine.getId();
     }
 
-    public List<GetAllRoutineResponse> findAllByMemberId(Long memberId, String selectedDate) {
-        List<GetAllRoutineResponse> result = new ArrayList<>();
-//        List<Routine> routineList = recordRepository.findAllByMemberId(memberId).stream()
-//                .filter(routine -> routine.getEndDate().isAfter(LocalDate.parse(selectedDate, dateFormatter).atTime(LocalTime.MIDNIGHT)))
-//                .collect(Collectors.toList());
+    public List<GetAllRoutineResponse> findAllByMemberId(Long memberId, LocalDateTime selectedDate) {
+//        LocalDateTime selected = LocalDate.parse(selectedDate, dateFormatter).atTime(LocalTime.MIDNIGHT);
+        List<Routine> routineList = routineRepository.findAllByMemberId(memberId).stream()
+                .filter(routine -> selectedDate.isAfter(routine.getStartDate()) || selectedDate.isEqual(routine.getStartDate()))
+                .filter(routine -> selectedDate.isBefore(routine.getEndDate()) || selectedDate.isEqual(routine.getEndDate()))
+                .toList();
 
-//        for (Routine routine : routineList) {
-//            Daily res = dailyRepository.findById(routine.getId())
-//                    .filter(daily -> daily.getStatus().equals(DailyCate.SUCCESS))
-//                    .map(daily -> daily.ge);
-//        }
+        List<GetAllRoutineResponse> result = new ArrayList<>();
+        for (Routine routine : routineList) {
+            Optional<Daily> daily = dailyRepository.findById(routine.getId());
+            GetAllRoutineResponse response = new GetAllRoutineResponse();
+            response.setRoutineId(routine.getId());
+            response.setRoutineCategories(routine.getRoutineCate());
+            response.setRoutineContent(routine.getContent());
+            response.setRoutineAlarmTime(routine.getAlarmTime());
+            if (daily.isPresent()) {
+                response.setRoutineStatus(daily.get().getStatus());
+            } else {
+                response.setRoutineStatus("NONE");
+            }
+
+            result.add(response);
+        }
 
         return result;
     }
